# fontations

./: .clippy.toml  .gitignore  .typos.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  fix_imports.py  presubmit.sh
compile-tables/: Cargo.toml
compile-tables/src/: from_obj.rs  graph.rs  layout.rs  lib.rs  offsets.rs  tables.rs  validate.rs  write.rs
fauntlet/: Cargo.toml  README.md
fauntlet/src/: compare_glyphs.rs  font.rs  lib.rs  main.rs  pen.rs
fauntlet/test_fonts/: README.md
font-builder/: Cargo.toml
font-builder/src/: lib.rs
font-codegen/: Cargo.toml  README.md
font-codegen/src/: compile_types.rs  error.rs  fields.rs  flags_enums.rs  format_group.rs  formatting.rs  generic_group.rs  lib.rs  lib2.rs  main.rs  parse.rs  parsing.rs  read_types.rs  record.rs  sanitized.rs  schema.rs  table.rs
font-codegen/tests/: all.rs  bad-attrs.stderr  bitflags.rs  count-all-guard.stderr  enum-bad-attrs.rs  enum-bad-attrs.stderr  enums.rs  must-include-lifetime.rs  single-lifetime-only.rs
font-tables/: Cargo.toml
font-tables-macro/: Cargo.toml
font-tables-macro/examples/: test.rs
font-tables-macro/src/: fields.rs  lib.rs
font-tables-macro/tests/: 01-parse.rs  02-avar.rs  03-count-fn.rs  04-array-all.rs  05-enum.rs  all.rs
font-tables/examples/: gdef_check.rs  inspect.rs  inspect_gpos.rs
font-tables/src/: array.rs  compile.rs  font_data.rs  hex_diff.rs  layout.rs  lib.rs  offset.rs  parse2.rs  parse_sketch.rs  read.rs  table_provider.rs  table_ref.rs  tables.rs  traversal.rs
font-test-data/: Cargo.toml  README.md  build.rs
font-test-data/src/: bebuffer.rs  cmap.rs  gdef.rs  gpos.rs  gsub.rs  ift.rs  kern.rs  layout.rs  lib.rs  type1.rs
font-test-data/test_data/: README.md  compile_fea.py  extract_glyphs.py  rebuild.sh  requirements.txt
font-types/: Cargo.toml  README.md
font-types/src/: attribute.rs  bbox.rs  conversion.rs  fixed.rs  fword.rs  glyph_id.rs  int24.rs  integers.rs  lib.rs  longdatetime.rs  name_id.rs  offset.rs  path.rs  pen.rs  point.rs  raw.rs  raw_le.rs  setting.rs  table.rs  tag.rs  test_helpers.rs  uint24.rs  var_array.rs  version.rs  version16dot16.rs
fontations/: Cargo.toml  README.md
fontations/src/: lib.rs
fontato/: Cargo.toml
fontato/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_basic_metadata.rs  fuzz_gdef.rs  fuzz_gpos.rs  fuzz_gsub.rs  fuzz_ift_patch_group.rs  fuzz_int_set.rs  fuzz_name.rs  fuzz_name_utf16.rs  fuzz_range_set.rs  fuzz_skrifa.rs  fuzz_skrifa_charmap.rs  fuzz_skrifa_color.rs  fuzz_skrifa_outline.rs  fuzz_sparse_bit_set_decode.rs  fuzz_sparse_bit_set_encode.rs  helpers.rs  int_set_op_processor.rs  traversal_fuzz.rs
incremental-font-transfer/: Cargo.toml  README.md
incremental-font-transfer/benches/: ift-benchmarks.rs  patch_benchmark.rs
incremental-font-transfer/src/: byte_buffer.rs  font_patch.rs  glyph_keyed.rs  ift_extend.rs  ift_graph.rs  lib.rs  patch_group.rs  patchmap.rs  short_string.rs  table_keyed.rs  uri_templates.rs  url_templates.rs
int-set/: Cargo.toml
int-set/benches/: bench_helper.rs  int_set_benchmark.rs  sparse_bit_set_benchmark.rs
int-set/src/: bitpage.rs  bitset.rs  input_bit_stream.rs  lib.rs  output_bit_stream.rs  sparse_bit_set.rs
klippa/: Cargo.toml  README.md
klippa/src/: base.rs  cblc.rs  cmap.rs  colr.rs  cpal.rs  fvar.rs  gdef.rs  glyf_loca.rs  gpos.rs  graph.rs  gsub.rs  gsubgpos.rs  gvar.rs  hdmx.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  inc_bimap.rs  layout.rs  lib.rs  main.rs  maxp.rs  name.rs  offset.rs  offset_array.rs  os2.rs  parsing_util.rs  post.rs  repack.rs  sbix.rs  serialize.rs  stat.rs  variations.rs  vorg.rs  vvar.rs
klippa/test-data/: README.md
klippa/tests/: integration_test.rs
otexplorer/: Cargo.toml  README.md
otexplorer/src/: main.rs  print.rs  query.rs
punchcut/: Cargo.toml  README.md
punchcut/docs/: capi.md
punchcut/src/: error.rs  glyph.rs  lib.rs  outline.rs  scaler.rs  sink.rs  source.rs  test.rs
read-fonts/: Cargo.toml  README.md  build.rs
read-fonts/benches/: bench_helper.rs  int_set_benchmark.rs  sanitize.rs  sparse_bit_set_benchmark.rs  table_lookup.rs
read-fonts/examples/: ift_dump.rs  inspect.rs
read-fonts/fuzz/: Cargo.toml
read-fonts/scripts/: gen_agl.py  gen_tables.py
read-fonts/src/: array.rs  codegen_test.rs  collections.rs  font_data.rs  layout.rs  lib.rs  model.rs  offset.rs  offset_array.rs  ps.rs  read.rs  sanitize.rs  table_provider.rs  table_ref.rs  tables.rs  traversal.rs  variation.rs  variations.rs
retired_crates/font-tables/: Cargo.toml
shared-brotli/: Cargo.toml
shared-brotli-patch-decoder/: Cargo.toml  build.rs
shared-brotli-patch-decoder/src/: c_brotli.rs  decode_error.rs  lib.rs  rust_brotli.rs  sys.rs
shared-brotli/src/: lib.rs
skera/: Cargo.toml  README.md
skera/benches/: skera-benchmarks.rs
skera/src/: avar.rs  base.rs  bidi.rs  cblc.rs  cmap.rs  colr.rs  cpal.rs  cvar.rs  fnv.rs  fvar.rs  gdef.rs  glyf_loca.rs  gpos.rs  graph.rs  gsub.rs  gsubgpos.rs  gvar.rs  hdmx.rs  head.rs  hmtx.rs  hvar.rs  inc_bimap.rs  layout.rs  lib.rs  main.rs  maxp.rs  mvar.rs  name.rs  offset.rs  offset_array.rs  os2.rs  parsing_util.rs  post.rs  priority_queue.rs  renaming.rs  repack.rs  sbix.rs  serialize.rs  stat.rs  unicode_closure.rs  (+4 more)
skera/test-data/: Makefile  Makefile.in
skera/tests/: integration_test.rs  repacker_test.rs
skrifa/: Cargo.toml  README.md
skrifa/benches/: scale.rs
skrifa/scripts/: gen_autohint_styles.py
skrifa/src/: attribute.rs  bitmap.rs  charmap.rs  collections.rs  coords.rs  decycler.rs  font_patch.rs  glyph_name.rs  glyph_names.rs  instance.rs  lib.rs  metrics.rs  patchmap.rs  provider.rs  scale.rs  setting.rs  size.rs  small_array.rs  string.rs  transform.rs  unique_id.rs  util.rs  variation.rs
skrifa_cxx/: Cargo.toml  build.rs
skrifa_cxx/src/: main.rs  outlines.cpp  outlines.h
subset-toy/: Cargo.toml
subset-toy/src/: gpos.rs  layout.rs  lib.rs  main.rs
toy-table-macro/: Cargo.toml
toy-table-macro/examples/: expand_me.rs
toy-types/: Cargo.toml  benchmarks.md
write-fonts/: Cargo.toml  README.md
(+2414 files in other folders)
