[workspace]
resolver = "2"

members = [
    "read-fonts",
    "font-types",
    "font-codegen",
    "font-test-data",
    "write-fonts",
    "otexplorer",
    "skrifa",
    "fauntlet",
    "klippa",
]

[workspace.dependencies]
# note: bytemuck version must be available in all deployment environments, 
# specifically the floor of the versions supported by google3 and Chrome
bytemuck = "1.13.1"
# dev dependencies
env_logger = "0.11"
pretty_assertions = "1.3.0"

[workspace.metadata.release]
allow-branch = ["main"]
