[workspace]
resolver = "2"

members = [
    "read-fonts",
    "font-types",
    "font-codegen",
    "font-test-data",
    "write-fonts",
    "otexplorer",
    "skrifa",
    "fauntlet",
    "klippa",
    "fuzz",
    "shared-brotli-patch-decoder",
    "incremental-font-transfer",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/googlefonts/fontations"

[workspace.dependencies]
# note: bytemuck version must be available in all deployment environments, 
# specifically the floor of the versions supported by google3 and Chrome
bytemuck = "1.13.1"
# dev dependencies
env_logger = "0.11"
pretty_assertions = "1.3.0"

kurbo = "0.11.0"

core_maths = "0.1"

# These allow using the workspace library crates without having to
# update the versions in each crate that uses the libraries or
# having to use the correct path.
# `read-fonts` disables default-features so that it can be used without
# default-features enabled by `skrifa`. Other crates using `read-fonts`
# that want default features will have to enable them directly.
font-test-data = { path = "font-test-data" }
font-types = { version = "0.8.3", path = "font-types" }
read-fonts = { version = "0.27.1", path = "read-fonts", default-features = false }
# Disable default-features so that fauntlet can use skrifa without autohint
# shaping support
skrifa = { version = "0.28.0", path = "skrifa", default-features = false, features = ["std"] }
write-fonts = { version = "0.36.0", path = "write-fonts" }
shared-brotli-patch-decoder = { version = "0.1.0", path = "shared-brotli-patch-decoder" }
incremental-font-transfer = { version = "0.1.0", path = "incremental-font-transfer" }
klippa = { version = "0.1.0", path = "klippa" }

[workspace.metadata.release]
allow-branch = ["main"]
