[package]
name = "compile-tables"
version = "0.0.0"
edition = "2021"
license = "MIT/Apache-2.0"


[features]
parsing = ["font-tables"]
default = ["parsing"]

[dependencies]
font-types = { path = "../font-types" }
font-tables = { path = "../font-tables", optional = true }
bitflags = "1.3"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
font-tables = { path = "../font-tables", features = ["test_data"]}
