[package]
name = "fauntlet"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Testing tool for comparing Skrifa and FreeType."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
publish = false

[dependencies]
skrifa = { version = "0.18.0", path = "../skrifa" }
freetype-rs = "0.32.0"
memmap2 = "0.5.10"
rayon = "1.8.0"
clap = { version = "4.4.7", features = ["derive"] }
wild = "2.2.0"
similar = "2.3.0"

# cargo-release settings
[package.metadata.release]
release = false
