[package]
name = "fauntlet"
version = "0.1.0"
description = "Testing tool for comparing Skrifa and FreeType."
readme = "README.md"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skrifa = { version = "0.20.0", path = "../skrifa" }
freetype-rs = "0.32.0"
memmap2 = "0.5.10"
rayon = "1.8.0"
clap = { version = "4.4.7", features = ["derive"] }
wild = "2.2.0"
similar = "2.3.0"

# cargo-release settings
[package.metadata.release]
release = false
