[package]
name = "font-codegen"
version = "0.0.0"
edition = "2021"
license = "MIT/Apache-2.0"
autotests = false
publish = false
default-run = "codegen"

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
font-types = { version = "0.0.3", path = "../font-types" }
rustfmt-wrapper = "0.1"
regex = "1.5"
miette = { version =  "4.6", features = ["fancy"] }
syn =  { version = "1.0", features = ["parsing",  "extra-traits", "full"] }
proc-macro2 =  { version = "1.0", features = ["span-locations"]}
quote = "1.0"
toml = "0.5"
serde = {version = "1.0", features = ["derive"] }
xflags = "0.2.4"
log = "0.4"
env_logger = "0.9.0"
rayon = "1.5.3"
indexmap = "1.9.1"
