[package]
name = "font-codegen"
version = "0.0.0"
edition = "2021"
license = "MIT/Apache-2.0"
autotests = false
publish = false
default-run = "codegen"

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
font-types = { version = "0.3.4", path = "../font-types" }
rustfmt-wrapper = "0.2"
regex = "1.5"
miette = { version =  "5.0", features = ["fancy"] }
syn =  { version = "2.0", features = ["parsing",  "extra-traits", "full"] }
proc-macro2 =  { version = "1.0", features = ["span-locations"]}
quote = "1.0"
toml = "0.7.5"
serde = {version = "1.0", features = ["derive"] }
xflags = "0.3.0"
log = "0.4"
env_logger = "0.10.0"
rayon = "1.5.3"
indexmap = "2.0"

# cargo-release settings
[package.metadata.release]
release = false
