[package]
name = "font-codegen"
version = "0.0.0"
autotests = false
publish = false
default-run = "codegen"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
font-types = { workspace = true }
rustfmt-wrapper = "0.2"
# this is not a direct dependecy of ours, but we specify it because the latest
# version, 0.5.12, doesn't work under our current MSRV
home = "=0.5.11"
regex = "1.5"
miette = { version =  "5.0", features = ["fancy"] }
syn =  { version = "2.0", features = ["parsing",  "extra-traits", "full"] }
proc-macro2 =  { version = "1.0", features = ["span-locations"]}
quote = "1.0"
toml = "0.8.19"
serde = {version = "1.0", features = ["derive"] }
xflags = "0.3.0"
log = "0.4"
rayon = "1.5.3"
indexmap = "2.0"
env_logger.workspace = true

# cargo-release settings
[package.metadata.release]
release = false
