[package]
name = "font-types-macro"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
toy-types = { path = "../toy-types" }

[dependencies]
syn = "1.0.86"
proc-macro2 = "1.0"
quote = "1.0"
