[package]
name = "font-tables"
version = "0.0.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
std = []
default = ["std"]

[dependencies]
font-types = { path = "../font-types" }
zerocopy = { version = "0.6.1" }
bitflags = "1.3"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
