[package]
name = "font-tables"
version = "0.0.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
std = []
test_data = []
traversal = ["std"]
default = ["traversal"]

[dependencies]
font-types = { path = "../font-types" }
bitflags = "1.3"
