[package]
name = "font-test-data"
version = "1.0.0"
description = "Test data for the fontations crates"
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

# do NOT create circular deps, even with dev-dependencies. It messes with google3 import.
[dependencies]
font-types = { workspace = true }

