[package]
name = "font-types"
version = "0.6.0"
description = "Scalar types used in fonts."
readme = "README.md"
categories = ["text-processing"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
std = []
bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]

[dependencies]
# note: bytemuck version must be available in all deployment environments
bytemuck = { workspace = true,  features = ["derive", "min_const_generics"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
