[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# cargo-release settings
[package.metadata.release]
release = false

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
skrifa = { path="../skrifa" }
rand = "0.8"
rand_chacha = "0.3"

[[bin]]
name = "fuzz_skrifa_charmap"
path = "fuzz_targets/fuzz_skrifa_charmap.rs"
test = false
doc = false

[[bin]]
name = "fuzz_basic_metadata"
path = "fuzz_targets/fuzz_basic_metadata.rs"
test = false
doc = false

[[bin]]
name = "fuzz_name"
path = "fuzz_targets/fuzz_name.rs"
test = false
doc = false

[[bin]]
name = "fuzz_skrifa_outline"
path = "fuzz_targets/fuzz_skrifa_outline.rs"
test = false
doc = false
