[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# cargo-release settings
[package.metadata.release]
release = false

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
skrifa = { path="../skrifa" }
font-types = { path= "../font-types" }
int-set = { path = "../int-set" }

[[bin]]
name = "fuzz_skrifa_charmap"
path = "fuzz_targets/fuzz_skrifa_charmap.rs"
test = false
doc = false

[[bin]]
name = "fuzz_basic_metadata"
path = "fuzz_targets/fuzz_basic_metadata.rs"
test = false
doc = false

[[bin]]
name = "fuzz_name"
path = "fuzz_targets/fuzz_name.rs"
test = false
doc = false

[[bin]]
name = "fuzz_skrifa_outline"
path = "fuzz_targets/fuzz_skrifa_outline.rs"
test = false
doc = false

[[bin]]
name = "fuzz_skrifa_color"
path = "fuzz_targets/fuzz_skrifa_color.rs"
test = false
doc = false

[[bin]]
name = "fuzz_int_set"
path = "fuzz_targets/fuzz_int_set.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sparse_bit_set_decode"
path = "fuzz_targets/fuzz_sparse_bit_set_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sparse_bit_set_encode"
path = "fuzz_targets/fuzz_sparse_bit_set_encode.rs"
test = false
doc = false
