[package]
name = "fuzz"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

# cargo-release settings
[package.metadata.release]
release = false

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
font-types = { workspace = true }
read-fonts = { workspace = true, default-features = true, features = ["ift"] }
write-fonts = { workspace = true, default-features = true, features = ["ift"] }
skrifa = { workspace = true }
incremental-font-transfer = { workspace = true }

[[bin]]
name = "fuzz_skrifa_charmap"
path = "fuzz_targets/fuzz_skrifa_charmap.rs"
test = false
doc = false

[[bin]]
name = "fuzz_basic_metadata"
path = "fuzz_targets/fuzz_basic_metadata.rs"
test = false
doc = false

[[bin]]
name = "fuzz_name"
path = "fuzz_targets/fuzz_name.rs"
test = false
doc = false

[[bin]]
name = "fuzz_skrifa_outline"
path = "fuzz_targets/fuzz_skrifa_outline.rs"
test = false
doc = false

[[bin]]
name = "fuzz_skrifa_color"
path = "fuzz_targets/fuzz_skrifa_color.rs"
test = false
doc = false

[[bin]]
name = "fuzz_int_set"
path = "fuzz_targets/fuzz_int_set.rs"
test = false
doc = false

[[bin]]
name = "fuzz_range_set"
path = "fuzz_targets/fuzz_range_set.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ift_patch_group"
path = "fuzz_targets/fuzz_ift_patch_group.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sparse_bit_set_decode"
path = "fuzz_targets/fuzz_sparse_bit_set_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sparse_bit_set_encode"
path = "fuzz_targets/fuzz_sparse_bit_set_encode.rs"
test = false
doc = false
