[package]
name = "incremental-font-transfer"
version = "0.1.0"
description = "Client side implementation of the Incremental Font Transfer standard (https://w3c.github.io/IFT/Overview.html)"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
all-features = true

[features]
default = ["read-fonts/std"]
cli = ["clap"]

[dependencies]
read-fonts = { workspace = true }
write-fonts = { workspace = true }
font-types = { workspace = true }
skrifa = { workspace = true }
shared-brotli-patch-decoder = { workspace = true }
uritemplate = "0.1.2"
data-encoding = "2.6.0"
data-encoding-macro = "0.1.15"
clap = { version = "4.5.4", features = ["derive"], optional = true }

[dev-dependencies]
font-test-data = { workspace = true }
read-fonts = { workspace = true }
brotlic = {version = "0.8.2"}


[lib]
name = "incremental_font_transfer"
path = "src/lib.rs"

[[bin]]
name = "ift_extend"
path = "src/ift_extend.rs"
required-features = ["cli"]
