[package]
name = "klippa"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Subsetting a font file according to provided input."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
int-set = { path = "../int-set" }
regex = "1.10.4"
skrifa = { version = "0.19.3", path = "../skrifa" }
thiserror = "1.0.58"
write-fonts = { path = "../write-fonts", features = ["read"] }


[dev-dependencies]
diff = "0.1.13"
tempdir = "0.3.7"
font-test-data = { path = "../font-test-data" }
