[package]
name = "otexplorer"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
xflags = "0.3.0"
read-fonts = { path = "../read-fonts",version = "0.20.0" }
font-types = { path = "../font-types",version = "0.6.0" }
ansi_term = "0.12.1"
atty = "0.2"

# cargo-release settings
[package.metadata.release]
release = false
