[package]
name = "otexplorer"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ansi_term = "0.12.1"
atty = "0.2"
font-types = { workspace = true }
read-fonts = { workspace = true, features = ["experimental_traverse"] }
xflags = "0.3.0"

# cargo-release settings
[package.metadata.release]
release = false
