[package]
name = "otexplorer"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
owo-colors = "4"
font-types = { workspace = true }
read-fonts = { workspace = true, features = ["experimental_traverse"] }
xflags = "0.3.0"

# cargo-release settings
[package.metadata.release]
release = false
