[package]
name = "punchcut"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Loading glyphs from OpenType font files."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[dependencies]
read-fonts = { version = "0.0.5", path = "../read-fonts" }
peniko = { git = "https://github.com/linebender/peniko" }

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
read-fonts = { version = "0.0.5", path = "../read-fonts", features = ["test_data"] }
