[package]
name = "read-fonts"
version = "0.2.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Reading OpenType font files."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]
std = ["font-types/std"]
codegen_test = []
traversal = ["std"]
default = ["traversal"]

[dependencies]
font-types = { version = "0.1.7", path = "../font-types" }

[dev-dependencies]
font-test-data = { path = "../font-test-data" }
