[package]
name = "read-fonts"
version = "0.37.0"
description = "Reading OpenType font files."
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --features libm,serde,std
features = ["libm", "serde", "std"]

[features]
std = ["font-types/std"]
codegen_test = []
scaler_test = []
# experimental support for incremental font transfer (https://www.w3.org/TR/IFT/)
# code behind this feature does not honor semver and may break at any time.
ift = []
# this feature is not stable, but provides untyped traversal of font tables.
# we do not consider this feature public API for the purposes of semver.
experimental_traverse = ["std"]
# Enables experimental implementations of proposed changes to the spec
# as discussed at https://github.com/harfbuzz/boring-expansion-spec
spec_next = []
default = ["std", "all_tables"]
serde = ["dep:serde", "font-types/serde"]
libm = ["dep:core_maths"]

# Table support
bitmap = []
layout = ["gpos", "gsub", "variations"]
variations = []
postscript = ["variations", "cff"]

# Tables
all_tables = [
  "aat", "ankr", "avar", "base", "bitmap", "cbdt", "cblc", "cff", "cff2", "cmap", "colr", "cpal", "cvar", "cvt", "dsig", "ebdt", "eblc",
  "feat", "fvar", "gasp", "gdef", "glyf", "gpos", "gsub", "gvar", "hdmx", "head", "hhea", "hmtx", "hvar", "kern", "kerx", "layout",
  "loca", "ltag", "maxp", "meta", "morx", "mvar", "name", "os2", "post", "postscript", "sbix", "stat", "svg", "trak", "varc",
  "variations", "vhea", "vmtx", "vorg", "vvar"
]
aat = []
ankr = ["aat"]
avar = ["variations"]
base = ["layout", "variations"]
cbdt = ["bitmap"]
cblc = ["bitmap"]
cff = ["postscript"]
cff2 = ["postscript"]
cmap = ["maxp"]
colr = ["variations"]
cpal = []
cvar = ["variations"]
cvt = []
dsig = []
ebdt = ["bitmap"]
eblc = ["bitmap"]
feat = []
fvar = ["avar", "variations"]
gasp = []
gdef = ["layout", "variations"]
glyf = []
gpos = ["layout"]
gsub = ["layout"]
gvar = ["loca", "glyf", "variations"]
hdmx = ["maxp"]
head = []
hhea = []
hmtx = ["hhea"]
hvar = ["variations"]
kern = ["kerx"]
kerx = ["aat"]
loca = ["head"]
ltag = []
maxp = []
meta = []
morx = ["aat"]
mvar = ["variations"]
name = []
os2 = []
post = []
sbix = ["maxp"]
stat = []
svg = []
trak = []
varc = ["variations", "layout", "postscript"]
vhea = []
vmtx = ["hmtx", "vhea"]
vorg = []
vvar = ["variations"]

[dependencies]
font-types = { workspace = true, features = ["bytemuck"] }
serde = { version = "1.0", features = ["derive"], optional = true }
core_maths = { workspace = true, optional = true }
bytemuck = { workspace = true }

[dev-dependencies]
font-test-data = { workspace = true }
criterion = "0.3.0"
rand = "0.8.5"
serde_json = { workspace = true }

[[bench]]
name = "int_set_benchmark"
harness = false

[[bench]]
name = "sparse_bit_set_benchmark"
harness = false
