[package]
name = "shared-brotli-patch-decoder"
version = "0.1.0"
description = "Wrapper around brotli-sys which allows for decoding shared brotli (https://datatracker.ietf.org/doc/draft-vandevenne-shared-brotli-format/) encoded patch data."
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
all-features = true

[features]
default = ["c-brotli"]
c-brotli = ["dep:brotlic-sys"]
rust-brotli = ["dep:brotli-decompressor"]


[dependencies]
brotlic-sys = {version = "0.2.2", optional = true}
brotli-decompressor = {version = "5.0.0", optional = true}
cfg-if = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
