[package]
name = "skera"
version = "0.1.3"
description = "Subsetting a font file according to provided input."
readme = "README.md"
categories = ["text-processing"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "skera"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
fnv = "1.0.7"
hashbrown = { version = "0.16.1", default-features = false, features = ["inline-more"] }
skrifa = { workspace = true }
thiserror = "2.0"
write-fonts = { workspace = true, features = ["read"] }


[dev-dependencies]
diff = "0.1.13"
tempdir = "0.3.7"
font-test-data = { workspace = true }
