[package]
name = "skera"
version = "0.4.0"
description = "Subsetting a font file according to provided input."
readme = "README.md"
categories = ["text-processing"]
exclude = ["/test-data"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "skera-benchmarks"
harness = false

[[bin]]
name = "skera"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
hashbrown = { version = "0.17.0", default-features = false, features = ["inline-more"] }
skrifa = { workspace = true }
thiserror = "2.0"
write-fonts = { workspace = true, features = ["read"] }


[dev-dependencies]
criterion = { workspace = true }
diff = "0.1.13"
font-test-data = { workspace = true }
rayon = { workspace = true }
rstest = "0.26.1"
tempfile = "3"
