[package]
name = "skrifa"
version.workspace = true
edition = "2021"
license = "MIT/Apache-2.0"
description = "Metadata and glyph loading for OpenType fonts."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]
default = ["scale"]
scale = []
hinting = []

[dependencies]
read-fonts = { version = "0.0.5", path = "../read-fonts" }

[dev-dependencies]
read-fonts = { version = "0.0.5", path = "../read-fonts", features = ["test_data"] }
