[package]
name = "skrifa"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Metadata and glyph loading for OpenType fonts."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]
publish = false

[features]
default = ["scale"]
scale = []
hinting = []

[dependencies]
read-fonts = { version = "0.1.4", path = "../read-fonts" }

[dev-dependencies]
read-fonts = { version = "0.1.4", path = "../read-fonts", features = ["test_data"] }

# cargo-release settings
[package.metadata.release]
release = false
