[package]
name = "skrifa"
version = "0.20.0"
description = "Metadata reader and glyph scaler for OpenType fonts."
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["traversal"]
std = ["read-fonts/std"]
traversal = ["std", "read-fonts/traversal"]
libm = ["dep:core_maths", "read-fonts/libm"]

[dependencies]
read-fonts = { workspace = true, default-features = false }
core_maths = { workspace = true, optional = true }
bytemuck = { workspace = true }

[dev-dependencies]
font-test-data = { workspace = true }
read-fonts = { workspace = true, features = [
    "scaler_test",
    "serde",
] }
serde = "1.0"
serde_json = "1.0"
pretty_assertions = "1.3.0"
write-fonts = { workspace = true }
kurbo.workspace = true
