[package]
name = "skrifa_cxx"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cxx = "1.0"
skrifa = { path = "../skrifa" }
read-fonts = { path = "../read-fonts", features = ["agl"] }

[build-dependencies]
cxx-build = "1.0"
