[package]
name = "subset-toy"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-types = { path = "../font-types" }
write-fonts = { path = "../write-fonts" }
read-fonts = { path = "../read-fonts" }
xflags = "0.2.4"
