[package]
name = "toy-types"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = ["std"]

[dependencies]
toy-types-derive = {path = "../toy-types-derive"}
zerocopy = "0.6.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "impl_compare"
harness = false
