[package]
name = "write-fonts"
version = "0.3.6"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Writing font files."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]
default = ["dot2"]

[dependencies]
font-types = { version = "0.1.7", path = "../font-types" }
read-fonts = { version = "0.2.1", path = "../read-fonts" }
log = "0.4"
bitflags = "1.3"
kurbo = "0.9.4"
dot2 = { version = "1.0", optional = true }

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
font-test-data = { path = "../font-test-data" }
read-fonts = { version = "0.2.1", path = "../read-fonts", features = [ "codegen_test"] }
env_logger = "0.10.0"
