[package]
name = "write-fonts"
version = "0.25.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Writing font files."
repository = "https://github.com/googlefonts/fontations"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]
default = []
read = []
serde = ["dep:serde", "font-types/serde", "read-fonts/serde"]

[dependencies]
font-types = { version = "0.4.3", path = "../font-types" }
read-fonts = { version = "0.17.0", path = "../read-fonts" }
log = "0.4"
kurbo = "0.11.0"
dot2 = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
indexmap = "2.0"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
font-test-data = { path = "../font-test-data" }
read-fonts = { version = "0.17.0", path = "../read-fonts", features = [
  "codegen_test",
] }
env_logger = "0.10.0"
rstest = "0.18.0"
pretty_assertions.workspace = true
bincode = "1.0"
