[package]
name = "write-fonts"
version = "0.36.0"
description = "Writing font files."
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
all-features = true

[features]
default = []
read = []
dot2 = ["dep:dot2"]
serde = ["dep:serde", "font-types/serde", "read-fonts/serde"]
ift = ["read-fonts/ift"]

[dependencies]
font-types = { workspace = true }
read-fonts = { workspace = true, default-features = true }
log = "0.4"
kurbo.workspace = true
dot2 = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
indexmap = "2.0"

[dev-dependencies]
diff = "0.1.12"
ansi_term = "0.12.1"
font-test-data = { workspace = true }
read-fonts = { workspace = true, features = [
  "codegen_test", "experimental_traverse"
] }
rstest = "0.18.0"
bincode = "1.0"
rand = "0.8.5"

pretty_assertions.workspace = true
env_logger.workspace = true
